Fix spacing and padding

--- a/src/main/resources/view/HelpWindow.css
+++ b/src/main/resources/view/HelpWindow.css
@@ -16,6 +16,8 @@
 
 #helpMessageContainer {
     -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-max-height: 500px;
+    -fx-max-width: 500px;
 }
 
 .help-title {
